FullQa New/src/objects/Response_Velocity__c.object
<CustomObject>
    <description>https://wiki.avalara.com/pages/viewpage.action?pageId=292769310</description>
    <fields>
        <fullName>Assignment_Date_Time__c</fullName>
        <description>https://wiki.avalara.com/pages/viewpage.action?pageId=292769310</description>
        <label>Assignment Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assignment_to_Nurture_Disqualified__c</fullName>
        <formula>ROUND( 60*12 * (
( 5 * FLOOR( ( DATEVALUE( Nurture_Disqualified_Date_Time__c) - DATE( 1900, 1, 8) ) / 7) +
MIN(5, 
MOD( DATEVALUE( Nurture_Disqualified_Date_Time__c ) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 12 * ( MOD( Nurture_Disqualified_Date_Time__c - DATETIMEVALUE( &apos;1900-01-08 12:00:00&apos; ), 1 ) ) )
) 
)
-
( 5 * FLOOR( ( DATEVALUE( Assignment_Date_Time__c) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( Assignment_Date_Time__c ) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 12 * ( MOD( Assignment_Date_Time__c  - DATETIMEVALUE( &apos;1900-01-08 12:00:00&apos; ), 1) ) )
)
) 
), 
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assignment to Nurture/Disqualified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignment_to_Working__c</fullName>
        <formula>ROUND( 60*12 * (
( 5 * FLOOR( ( DATEVALUE( Working_Date_Time__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN(5, 
MOD( DATEVALUE( Working_Date_Time__c ) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 12 * ( MOD( Working_Date_Time__c - DATETIMEVALUE( &apos;1900-01-08 12:00:00&apos; ), 1 ) ) )
) 
)
-
( 5 * FLOOR( ( DATEVALUE( Assignment_Date_Time__c) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( Assignment_Date_Time__c) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 12 * ( MOD( Assignment_Date_Time__c  - DATETIMEVALUE( &apos;1900-01-08 12:00:00&apos; ), 1) ) )
)
) 
), 
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assignment to Working</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Most_recent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>https://jira.avalara.com/browse/BATS-525</description>
        <label>Campaign Most recent</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Response Velocities</relationshipLabel>
        <relationshipName>Response_Velocities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Response Velocities</relationshipLabel>
        <relationshipName>Response_Velocities_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Response Velocities</relationshipLabel>
        <relationshipName>Response_Velocities_Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MK_Customer_Fit_Score__c</fullName>
        <description>https://jira.avalara.com/browse/BATS-525</description>
        <label>MK Customer Fit Score</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MK_Lead_Score__c</fullName>
        <description>https://jira.avalara.com/browse/BATS-525</description>
        <label>MK Lead Score</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MQL_Date_Time__c</fullName>
        <description>https://wiki.avalara.com/pages/viewpage.action?pageId=292769310</description>
        <label>MQL Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MQL_Outside_of_Business_Hours__c</fullName>
        <formula>IF( 
OR( 
MOD(DATEVALUE(MQL_Date_Time__c) - DATE(1900, 1, 6), 7) &lt; 2, 
VALUE(MID(TEXT(MQL_Date_Time__c),12,2))&lt;12, 
VALUE(MID(TEXT(MQL_Date_Time__c),12,2))&gt;24), 
true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MQL Outside of Business Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MQL_to_Assignment__c</fullName>
        <formula>ROUND( 60*12 * (
   ( 5 * FLOOR( ( DATEVALUE( Assignment_Date_Time__c ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( Assignment_Date_Time__c ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 12 * ( MOD( Assignment_Date_Time__c - DATETIMEVALUE( &apos;1900-01-08 12:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( MQL_Date_Time__c ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( MQL_Date_Time__c ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 12 * ( MOD( MQL_Date_Time__c - DATETIMEVALUE( &apos;1900-01-08 12:00:00&apos; ), 1) ) )
    )
   ) 
  ), 
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MQL to Assignment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MQL_to_Nurture_Disqualified__c</fullName>
        <formula>ROUND( 60*12 * (
   ( 5 * FLOOR( ( DATEVALUE( Nurture_Disqualified_Date_Time__c) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( Nurture_Disqualified_Date_Time__c ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 12 * ( MOD( Nurture_Disqualified_Date_Time__c- DATETIMEVALUE( &apos;1900-01-08 12:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( MQL_Date_Time__c ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( MQL_Date_Time__c ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 12 * ( MOD( MQL_Date_Time__c - DATETIMEVALUE( &apos;1900-01-08 12:00:00&apos; ), 1) ) )
    )
   ) 
  ), 
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MQL to Nurture/Disqualified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MQL_to_Processing__c</fullName>
        <formula>ROUND( 60*12 * (
   ( 5 * FLOOR( ( DATEVALUE( Processing_Date_Time__c ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( Processing_Date_Time__c ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 12 * ( MOD( Processing_Date_Time__c - DATETIMEVALUE( &apos;1900-01-08 12:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( MQL_Date_Time__c ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( MQL_Date_Time__c ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 12 * ( MOD( MQL_Date_Time__c - DATETIMEVALUE( &apos;1900-01-08 12:00:00&apos; ), 1) ) )
    )
   ) 
  ), 
0 )</formula>
        <label>MQL to Processing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MQL_to_Working__c</fullName>
        <formula>ROUND( 60*12 * (
   ( 5 * FLOOR( ( DATEVALUE( Working_Date_Time__c ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( Working_Date_Time__c ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 12 * ( MOD( Working_Date_Time__c - DATETIMEVALUE( &apos;1900-01-08 12:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( MQL_Date_Time__c ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( MQL_Date_Time__c ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 12 * ( MOD( MQL_Date_Time__c - DATETIMEVALUE( &apos;1900-01-08 12:00:00&apos; ), 1) ) )
    )
   ) 
  ), 
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MQL to Working</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_of_Contact__c</fullName>
        <description>https://jira.avalara.com/browse/BATS-525</description>
        <label>Method of Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Webform T1</fullName>
                </value>
                <value>
                    <fullName>Webform T2</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_Recent_Conversion_Date__c</fullName>
        <label>Most Recent Conversion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nurture_Disqualified_Date_Time__c</fullName>
        <description>https://jira.avalara.com/browse/BATS-622</description>
        <label>Nurture/Disqualified Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Nurture_Disqualified_Reason_Text__c</fullName>
        <label>Nurture/Disqualified Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nurture_Disqualified_Reason__c</fullName>
        <description>https://jira.avalara.com/browse/BATS-622</description>
        <label>Nurture/Disqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Nurture_Reasons</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <label>Offer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>Case Study</fullName>
                </value>
                <value>
                    <fullName>CL Event</fullName>
                </value>
                <value>
                    <fullName>Content Syndication Whitepaper</fullName>
                </value>
                <value>
                    <fullName>Corporate Sponsored Event</fullName>
                </value>
                <value>
                    <fullName>Direct to Rep</fullName>
                </value>
                <value>
                    <fullName>Emergency Service Notice</fullName>
                </value>
                <value>
                    <fullName>Free Rates</fullName>
                </value>
                <value>
                    <fullName>Free Trial</fullName>
                </value>
                <value>
                    <fullName>General Contact</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>OBTM</fullName>
                </value>
                <value>
                    <fullName>Online Buying</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner Event</fullName>
                </value>
                <value>
                    <fullName>Partner Training</fullName>
                </value>
                <value>
                    <fullName>Product Offering</fullName>
                </value>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Revive</fullName>
                </value>
                <value>
                    <fullName>Roadshow</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Through-partner syndication</fullName>
                </value>
                <value>
                    <fullName>Tradeshow</fullName>
                </value>
                <value>
                    <fullName>User Group</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Website Visit</fullName>
                </value>
                <value>
                    <fullName>Web Tools</fullName>
                </value>
                <value>
                    <fullName>Whitepaper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Created__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>https://jira.avalara.com/browse/BATS-525</description>
        <label>Opportunity Created</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Response Velocities</relationshipLabel>
        <relationshipName>Response_Velocities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_SubType__c</fullName>
        <label>Opportunity SubType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACP</fullName>
                </value>
                <value>
                    <fullName>AvaTax</fullName>
                </value>
                <value>
                    <fullName>BizDev</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>CertCapture</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>DSP</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Excise</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>LandedCost</fullName>
                </value>
                <value>
                    <fullName>MatrixMaster</fullName>
                </value>
                <value>
                    <fullName>MSP</fullName>
                </value>
                <value>
                    <fullName>MSP-Payroll</fullName>
                </value>
                <value>
                    <fullName>MyLodge</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SOHO</fullName>
                </value>
                <value>
                    <fullName>TrustFile</fullName>
                </value>
                <value>
                    <fullName>Included</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_at_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>https://jira.avalara.com/browse/BATS-622</description>
        <label>Owner at Assignment</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Response_Velocities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processing_Date_Time__c</fullName>
        <description>https://wiki.avalara.com/pages/viewpage.action?pageId=292769310
https://jira.avalara.com/browse/ITBSE-563?filter=-1</description>
        <label>Processing Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Processing_to_Working__c</fullName>
        <description>(Working_Date_Time__c - Processing_Date_Time__c)*24*60</description>
        <formula>ROUND( 60*12 * (
   ( 5 * FLOOR( ( DATEVALUE( Working_Date_Time__c ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( Working_Date_Time__c ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 12 * ( MOD( Working_Date_Time__c - DATETIMEVALUE( &apos;1900-01-08 12:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( Processing_Date_Time__c ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( Processing_Date_Time__c ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 12 * ( MOD( Processing_Date_Time__c - DATETIMEVALUE( &apos;1900-01-08 12:00:00&apos; ), 1) ) )
    )
   ) 
  ), 
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Processing to Working</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Working_Date_Time__c</fullName>
        <description>https://wiki.avalara.com/pages/viewpage.action?pageId=292769310
https://jira.avalara.com/browse/ITBSE-563?filter=-1</description>
        <label>Working Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Working_to_Nurture_Disqualified__c</fullName>
        <formula>ROUND( 60*12 * (
   ( 5 * FLOOR( ( DATEVALUE( Nurture_Disqualified_Date_Time__c) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( Nurture_Disqualified_Date_Time__c) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 12 * ( MOD( Nurture_Disqualified_Date_Time__c- DATETIMEVALUE( &apos;1900-01-08 12:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( Working_Date_Time__c ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( Working_Date_Time__c) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 12 * ( MOD( Working_Date_Time__c- DATETIMEVALUE( &apos;1900-01-08 12:00:00&apos; ), 1) ) )
    )
   ) 
  ), 
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Working to Nurture/Disqualified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Response Velocity</label>
    <nameField>
        <displayFormat>RV-{0000}</displayFormat>
        <label>Response Velocity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Response Velocities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>